--- a/src/views/pages/search/detail.ejs
+++ b/src/views/pages/search/detail.ejs
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    <%- include('../../partials/header-small', { user }) %>
+
     <main class="content-container">
         <section class="title">
             <h1><%=accoDetail[0].acco_name%></h1>
