--- a/src/public/styles/pages/account/information.css
+++ b/src/public/styles/pages/account/information.css
@@ -9,10 +9,10 @@ html {
     font-size: 16px;
     color: var(--black);
 }
-
+/* 
 body {
     width: 100vw;
-}
+} */
 
 .account-container {
     width: 80%;
