--- a/src/views/partials/header-small.ejs
+++ b/src/views/partials/header-small.ejs
@@ -11,7 +11,8 @@
             <div class="header-container__top-authenticator">
                 <% if (user) { %>
                 <p>Chào,</p>
-                <p class="name-click-hf"><%= user?.last_name + ' ' + user?.first_name %></p>
+                <a href="/account/information" style="text-decoration: none;"><p><%= user?.last_name + ' ' + user?.first_name %></p></a>
+                <!-- <p class="name-click-hf"><%# user?.last_name + ' ' + user?.first_name %></p> -->
                 <img src="/imgs/user/<%= user?.avatar ?? 'user_1.jpg'%>" alt="avatar" class="avatar-btn-hf" />
                 <% } else { %>
                 <a href="/auth/login" style='text-decoration: none;'>
