Update ejs, css for /booking/detail

--- a/src/views/pages/booking/detail.ejs
+++ b/src/views/pages/booking/detail.ejs
@@ -15,7 +15,7 @@
     <main class="content-container">
         <section class="title">
             <h1>Đặt phòng đã được xác nhận của bạn tại 2way.com</h1>
-            
+
         </section>
 
         <section class="detail">
@@ -26,103 +26,131 @@
                         <h3><%=booking[0].acco_name%></h3>
                         <div class="title__rating">
                             <% for (let i = 0; i < booking[0].acco_star; i++) {%>
-                                <span class="material-symbols-outlined">grade</span>
-                                <%}%>
+                            <span class="material-symbols-outlined">grade</span>
+                            <%}%>
                                 <% for (let i = 0; i < 5-(booking[0].acco_star) ; i++) {%>
-                                <span class="material-symbols-outlined"
-                                    style="font-variation-settings: 'FILL' 0">star</span>
+                            <span class="material-symbols-outlined" style="font-variation-settings: 'FILL' 0">star</span>
                             <%}%>
                         </div>  
                         <p><%=booking[0].acco_exac_location%></p>
-                        <p>Hội An,</p>
-                        <p>Việt Nam.</p>
+                            <p>Hội An,</p>
+                            <p>Việt Nam.</p>
+                        </div>
+                        <a href="<%=booking[0].acco_location_link%>" data-bs-toggle="modal" data-bs-target="#modal">Hiển thị bản đồ</a>
                     </div>
-                    <a href="<%=booking[0].acco_location_link%>" data-bs-toggle="modal" data-bs-target="#modal">Hiển thị bản đồ</a>
-                </div>
-                <div class="detail__contact">
-                    <h2>Bạn có thắc mắc?</h2>
-                    <p>Liên hệ chỗ nghỉ nếu bạn có thắc mắc hay yêu cầu đặc biệt nào.</p>
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#modal">+84 348 918 224</a>
-                    <button type="button" class="btn detail__btn" data-bs-toggle="modal" data-bs-target="#modal">
-                        <span class="material-symbols-outlined">chat</span>
-                        <p>Nhắn tin cho chỗ nghỉ</p>
-                    </button>
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#modal">Gửi mail cho chỗ nghỉ</a>
-                </div>
-                <div class="detail__help">
-                    <div>
-                        <span class="material-symbols-outlined">help</span>
-                        <h2>Bạn cần trợ giúp?</h2>
+                    <div class="detail__contact">
+                        <h2>Bạn có thắc mắc?</h2>
+                        <p>Liên hệ chỗ nghỉ nếu bạn có thắc mắc hay yêu cầu đặc biệt nào.</p>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#modal">+84 348 918 224</a>
+                        <button type="button" class="btn detail__btn" data-bs-toggle="modal" data-bs-target="#modal">
+                            <span class="material-symbols-outlined">chat</span>
+                            <p>Nhắn tin cho chỗ nghỉ</p>
+                        </button>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#modal">Gửi mail cho chỗ nghỉ</a>
                     </div>
-                    <a href="" data-bs-toggle="modal" data-bs-target="#modal">Liên hệ Dịch vụ Khách hàng</a>
-                </div>
-            </div>
-
-            <div class="detail__col-2">
-                <div class="detail__code">
-                    <div>
-                        <h3>Mã xác nhận:</h3>
-                        <p>12345678</p>
+                    <div class="detail__help">
+                        <div>
+                            <span class="material-symbols-outlined">help</span>
+                            <h2>Bạn cần trợ giúp?</h2>
+                        </div>
+                        <a href="" data-bs-toggle="modal" data-bs-target="#modal">Liên hệ Dịch vụ Khách hàng</a>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#modal">Thay đổi ngày tháng</a>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#modal">Thêm lựa chọn chỗ nghỉ cho khách</a>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#modal">Xem chính sách của chỗ nghỉ</a>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#modal">Xem xác nhận đặt phòng</a>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#modal">In xác nhận đặt phòng</a>
                     </div>
-                </div>
-                <hr>
-                <div class="detail__checkin">
-                    <h3>Ngày đặt</h3>
-                    <p><%=booking[0].book_date_format%></p>
-                    <p><%=booking[0].book_time_format%></p>
-                </div>
-                <hr>
-                <div class="detail__checkin">
-                    <h3>Nhận phòng</h3>
-                    <p><%=booking[0].book_start_date_format%></p>
-                    <p><%=booking[0].book_start_time_format%></p>
-                </div>
-                <hr>
-                <div class="detail__checkout">
-                    <h3>Trả phòng</h3>
-                    <p><%=booking[0].book_end_date_format%></p>
-                    <p><%=booking[0].book_end_time_format%></p>
-                </div>
-                <hr>
-                <div class="detail__price price">
-                    <h3>Giá</h3>
-                    <p>3 đêm, 3 phòng</p>
-                    <p class="price__strong">VND <%=booking[0].book_cost_after_currency%></p>
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#modal">Giá này đã bao gồm những gì?</a>
                 </div>
 
-                <% bookingDetails.forEach(function(book){ %>
+                <div class="detail__col-2">
+                    <h2>Danh sách phòng đặt</h2>
+                    <div class="detail__room room">
+                        <h3>Phòng Deluxe giường đôi nhìn ra biển...</h3>
+                        <div class="room__content">
+                            <img src="/imgs/accommodation/accommodation_1.jpg" alt="">
+                            <div>
+                                <p class="room__room-class">Phòng hạng sang</p>
+                                <p class="room__quantity">Số lượng: 3</p>
+                                <p class="room__unit-price"><del>VND 100.000.000</del> VND 100.000.000</p>
+                                <button type="button" class="btn detail__btn">Đánh giá</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="detail__room room">
+                        <h3>Phòng Deluxe giường đôi nhìn ra biển...</h3>
+                        <div class="room__content">
+                            <img src="/imgs/accommodation/accommodation_1.jpg" alt="">
+                            <div>
+                                <p class="room__room-class">Phòng hạng sang</p>
+                                <p class="room__quantity">Số lượng: 3</p>
+                                <p class="room__unit-price"><del>VND 100.000.000</del> VND 100.000.000</p>
+                                <button type="button" class="btn detail__btn">Đánh giá</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="detail__room room">
+                        <h3>Phòng Deluxe giường đôi nhìn ra biển...</h3>
+                        <div class="room__content">
+                            <img src="/imgs/accommodation/accommodation_1.jpg" alt="">
+                            <div>
+                                <p class="room__room-class">Phòng hạng sang</p>
+                                <p class="room__quantity">Số lượng: 3</p>
+                                <p class="room__unit-price"><del>VND 100.000.000</del> VND 100.000.000</p>
+                                <button type="button" class="btn detail__btn">Đánh giá</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="detail__col-3">
+                    <div class="detail__code">
+                        <div>
+                            <h3>Mã xác nhận:</h3>
+                            <p>12345678</p>
+                        </div>
+                    </div>
+                    <div class="detail__checkin">
+                        <h3>Ngày đặt</h3>
+                        <p><%=booking[0].book_date_format%></p>
+                        <p><%=booking[0].book_time_format%></p>
+                    </div>
+                    <div class="detail__checkin">
+                        <h3>Nhận phòng</h3>
+                        <p><%=booking[0].book_start_date_format%></p>
+                        <p><%=booking[0].book_start_time_format%></p>
+                    </div>
+                    <div class="detail__checkout">
+                        <h3>Trả phòng</h3>
+                        <p><%=booking[0].book_end_date_format%></p>
+                        <p><%=booking[0].book_end_time_format%></p>
+                    </div>
+                    <div class="detail__price price">
+                        <h3>Tổng tiền thanh toán</h3>
+                        <p class="price__strong">VND <%=booking[0].book_cost_after_currency%></p>
+                    </div>
+
+                    <% bookingDetails.forEach(function(book){ %>
                     <p><%=book.room_name%></p>
                     <% if (booking[0].book_status == 1){ %>
                     <div class="detail__price price">
                         <form action="/account/addReview" method="POST">
                             <input type="hidden" value="<%=book.room_id%>" name="room_id">
-                            <button type = "submit" class="form--submit2 review-btn">Đánh giá</button>
+                            <button type="submit" class="form--submit2 review-btn btn detail__btn">Đánh giá</button>
                         </form>
                     </div>
-                    <% } %> 
-                <% }) %> 
-
-            </div>
-
-            <div class="detail__col-3">
-                <a href="#" data-bs-toggle="modal" data-bs-target="#modal">Thay đổi ngày tháng</a>
-                <a href="#" data-bs-toggle="modal" data-bs-target="#modal">Thêm lựa chọn chỗ nghỉ cho khách</a>
-                <a href="#" data-bs-toggle="modal" data-bs-target="#modal">Xem chính sách của chỗ nghỉ</a>
-                <hr>
-                <a href="#" data-bs-toggle="modal" data-bs-target="#modal">Xem xác nhận đặt phòng</a>
-                <a href="#" data-bs-toggle="modal" data-bs-target="#modal">In xác nhận đặt phòng</a>
-            </div>
+                    <% } %>
+                    <% }) %>
+                </div>
         </section>
 
         <section class="abort">
             <div class="abort__info">
                 <h2>Miễn phí hủy đặt phòng</h2>
                 <% if (!booking[0].book_time_left_format){ %>
-                    <p class="abort__time-left">Hết hạn hủy miễn phí!!!</p>
+                <p class="abort__time-left">Hết hạn hủy miễn phí!!!</p>
                 <% } else { %>
-                    <p class="abort__time-left">Còn <%=booking[0].book_time_left_format%>!!!</p>
-                <% } %>        
+                <p class="abort__time-left">Còn <%=booking[0].book_time_left_format%>!!!</p>
+                <% } %>
                 <p class="abort__condition">Để <span class="abort__highlight">miễn phí hủy</span> bạn cần phải hủy <span class="abort__highlight">trước <%=booking[0].book_time_count_format%> <%=booking[0].book_time_format%> giờ</span></p>
                 <p>Sau thời gian này bạn sẽ phải thanh toán VND 2.800.000 để hủy</p>
             </div>
@@ -139,7 +167,7 @@
             <a href="/booking/success" class="btn detail__btn" role="button">Hủy đặt phòng</a>
         </section>
     </main>
-<%- include('../../components/cancel-popup') %>
+    <%- include('../../components/cancel-popup') %>
 
     <div class="modal fade" id="modal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-lg ">
