--- a/src/views/pages/account/history.ejs
+++ b/src/views/pages/account/history.ejs
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
     <title>2WAYS.com</title>
     <link rel="stylesheet" href="/styles/pages/account/history.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
@@ -13,7 +15,10 @@
 </head>
 
 <body>
-    <%- include('../../partials/header-medium.ejs') %>
+    <% if (typeof data_search !== 'undefined' && data_search !== null) { %>
+    <%- include('../../partials/header-medium.ejs', { data_search }) %>
+    <% } else { %>
+    <% } %>
     <%# include('../../partials/nav-tree') %>
 
 
@@ -22,7 +27,8 @@
             <div class="aside-content__profile">
                 <img class="aside-content__img" src="/imgs/user/<%=user.au_user_avt_url%>" alt="avatar" />
                 <div class="aside-content__detail">
-                    <p class="aside-content__detail-bold"><%=user.au_user_last_name%>&nbsp<%=user.au_user_first_name%></p>
+                    <p class="aside-content__detail-bold"><%=user.au_user_last_name%>&nbsp<%=user.au_user_first_name%>
+                    </p>
                     <p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
                 </div>
             </div>
@@ -50,7 +56,7 @@
 
             <!-- <div class="filter-bar"></div> -->
             <% if(!bookingDetails[0]) { %>
-                <p>Không tìm thấy</p>
+            <p>Không tìm thấy</p>
             <% } %>
             <div class="booking-history__items">
                 <% bookingDetails.forEach(function(bookingDetail){ %>
@@ -65,7 +71,7 @@
     <%-include('../../partials/footer.ejs') %>
 
     <script src="/scripts/booking-history.js" defer></script>
-    <script script src="/scripts/review-popup.js"></script>
+    <script src="/scripts/review-popup.js" defer></script>
     <script src="/scripts/search-bar.js"></script>
     <script src="/scripts/header-medium.js"></script>
 
