Revert "Update addReview of room"
This reverts commit 03ac1b59f1e8c3f0cd1395dd3c32985ae861101c.

--- a/src/views/components/room-in-hs.ejs
+++ b/src/views/components/room-in-hs.ejs
@@ -1,5 +1,5 @@
 <div class="room-in-hs">
-    <input type="hidden" name="room_id" value="<%#room.room_id%>">
+    <input type="hidden" name="room_id" value="<%=room.room_id%>">
     <div class="room-in-hs__detail">
         <h2 class="room-in-hs__name"><b><%= bookingDetail.acco_name %></b></h2>
         <div class="room-in-hs__book-date">
