--- a/src/views/components/cancel-popup.ejs
+++ b/src/views/components/cancel-popup.ejs
@@ -1,4 +1,4 @@
-<div class="modal modal__cancel-popup">
+<div class="modal">
     <div class="cancel-container">
         <div class="cancel">
             <div class="cancel__card">
