Update FE /account/information+historry + /auth/login

--- a/src/public/styles/components/next-page.css
+++ b/src/public/styles/components/next-page.css
@@ -36,8 +36,10 @@ ul.pagination {
     justify-content: flex-end;
 }
 
-nav {
+nav.pagination {
     width: 80%;
+    margin: 0 auto;
+    margin-top: 16px;
     max-width: 1152px;
     display: flex;
     justify-content: flex-end;
