--- a/src/views/components/next-page.ejs
+++ b/src/views/components/next-page.ejs
@@ -1,4 +1,4 @@
-<nav aria-label="Page navigation example ">
+<nav class='pagination' aria-label="Page navigation example ">
     <ul class="pagination">
         <li class="page-item">
             <a class="page-link" href="#"><span class="material-symbols-outlined"> navigate_before</span></a>
