--- a/src/views/pages/auth/login.ejs
+++ b/src/views/pages/auth/login.ejs
@@ -28,8 +28,10 @@
             <h1 class="login__title">Đăng nhập</h1>
             <form class="login__form form" id="login-form" action="/login" method="post">
                 <div class="row">
-                    <label for="form__email" class="form-label">Email</label>
-                    <input type="email" name="email" class="form-control form__email" id="form__email" placeholder="Nhập email">
+                    <div class="input_form">
+                        <label for="form__email" class="form-label">Email</label>
+                        <input type="email" name="email" class="form-control form__email" id="form__email" placeholder="Nhập email">
+                    </div>
                     <div class="error"></div>
                 </div>
                 <div class="row">
@@ -37,8 +39,8 @@
                     <div class="input_form">
                         <input type="password" name="password" class="form-control form__password" id="form__password" placeholder="Nhập mật khẩu" />
                         <span class="material-symbols-outlined" id="eye-open">visibility</span>
-                        <div class="error"></div>
                     </div>
+                    <div class="error"></div>
                 </div>
                 <!-- <div class="error-message" id="error-message"></div> -->
                 <button id="login-button" type="submit" class="btn form__submit">
