--- a/src/public/styles/pages/account/change-password.css
+++ b/src/public/styles/pages/account/change-password.css
@@ -10,9 +10,9 @@ html {
     color: var(--black);
 }
 
-body {
+/* body {
     width: 100vw;
-}
+} */
 
 .change-password-container {
     margin: 0 auto;
@@ -20,6 +20,9 @@ body {
     max-width: 1152px;
     display: flex;
     gap: 12px;
+    display: flex;
+    align-items: flex-start;
+    padding-bottom: 12px;
 }
 
 .aside-content {
@@ -39,18 +42,24 @@ body {
     gap: 12px;
 }
 
-.aside-content__section {
+.aside-content__detail-bold {
+    font-weight: 500;
+    margin: 12px 0 0 0;
+}
+
+.aside-section {
     font-weight: 500;
 }
 
-.aside-content__section p {
+.aside-section p {
     padding: 12px;
     height: 48px;
     margin-bottom: 12px;
     cursor: pointer;
+    color: var(--black);
 }
 
-.aside-content__section p:hover,
+.aside-section p:hover,
 .logout-btn:hover {
     border-radius: 8px;
     background-color: var(--gray);
@@ -58,7 +67,7 @@ body {
     cursor: pointer;
 }
 
-.aside-content__section p:nth-child(4) {
+.aside-section p.active {
     background-color: var(--primary-color-1);
     color: var(--white);
     border-radius: 8px;
@@ -70,12 +79,7 @@ body {
     border-radius: 100%;
 }
 
-.aside-content__detail-bold {
-    font-weight: 500;
-    margin: 12px 0 0 0;
-}
-
-.aside-content__item p {
+.aside-item p {
     color: var(--red);
     font-weight: 500;
     margin: 12px;
@@ -87,7 +91,7 @@ body {
     border-radius: 8px;
     width: 75%;
     padding: 24px;
-    height: 240px;
+    /* height: 240px; */
 }
 
 .form__item-change1 {
@@ -160,7 +164,7 @@ body {
 }
 
 .form__item h1 {
-    width: 305px;
+    min-width: 305px;
     font-size: 22px;
     display: flex;
     justify-content: flex-end;
