--- a/src/views/pages/account/information.ejs
+++ b/src/views/pages/account/information.ejs
@@ -133,22 +133,22 @@
                         <option value="Nữ">Nữ</option>
                         <option value="Khác">Khác</option>
                         <% } else if (data.sex == "Nam") { %>
-                        <option>Thêm giới tính</option>
+                        <option value=null>Thêm giới tính</option>
                         <option value="Nam" selected>Nam</option>
                         <option value="Nữ">Nữ</option>
                         <option value="Khác">Khác</option>
                         <% } else if (data.sex == 'Nữ') { %>
-                        <option>Thêm giới tính</option>
+                        <option value=null>Thêm giới tính</option>
                         <option value="Nam">Nam</option>
                         <option value="Nữ" selected>Nữ</option>
                         <option value="Khác">Khác</option>
                         <% } else if (data.sex == 'Khác') { %>
-                        <option>Thêm giới tính</option>
+                        <option value=null>Thêm giới tính</option>
                         <option value="Nam">Nam</option>
                         <option value="Nữ">Nữ</option>
                         <option value="Khác" selected>Khác</option>
                         <% } else { %>
-                        <option selected>Thêm giới tính</option>
+                        <option value=null selected>Thêm giới tính</option>
                         <option value=" Nam">Nam</option>
                         <option value="Nữ">Nữ</option>
                         <option value="Khác">Khác</option>
