--- a/src/public/styles/pages/account/payment.css
+++ b/src/public/styles/pages/account/payment.css
@@ -1,12 +1,13 @@
 @import url("/styles/base.css");
 @import url("/styles/partials/header-medium.css");
 @import url("/styles/partials/footer.css");
+@import url("/styles/partials/nav-tree.css");
 @import url("/styles/components/bank-account-popup.css");
 @import url("/styles/components/credit-account-popup.css");
 @import url("/styles/components/otp.css");
 @import url("/styles/components/success-popup.css");
 
-html {
+/* html {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     color: var(--black);
@@ -17,24 +18,16 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} */
 
 .payment-account-container {
     margin-top: 12px;
     margin-bottom: 12px;
-    /* width: 80%; */
-    width: 1152px;
+    width: 80%;
+    max-width: 1152px;
+    margin: 0 auto;
     display: flex;
     gap: 12px;
-}
-
-hr {
-    background-color: var(--outline-variant);
-    border-width: 2px;
-    width: 100%;
-    margin: 12px;
-    margin-left: 2px;
-    opacity: none;
 }
 
 .aside-content {
@@ -43,9 +36,9 @@ hr {
     width: 25%;
     padding: 12px;
     border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    border: 1px solid var(--outline-variant);
     background: var(--white);
-    height: 450px;
+    align-self: flex-start;
 }
 
 .aside-content__profile {
@@ -54,29 +47,35 @@ hr {
     gap: 12px;
 }
 
-.aside-content__section {
+.aside-content__detail-bold {
+    font-weight: 500;
+    margin: 12px 0 0 0;
+}
+
+.aside-section {
     font-weight: 500;
 }
 
-.aside-content__section p {
+.aside-section p {
     padding: 12px;
     height: 48px;
     margin-bottom: 12px;
     cursor: pointer;
+    color: var(--black);
 }
 
-.aside-content__section p:hover {
+.aside-section p:hover,
+.logout-btn:hover {
     border-radius: 8px;
     background-color: var(--gray);
     transition: 0.3s;
     cursor: pointer;
 }
 
-.aside-content__section p:nth-child(3) {
+.aside-section p.active {
     background-color: var(--primary-color-1);
     color: var(--white);
     border-radius: 8px;
-    padding: 12px;
 }
 
 .aside-content__img {
@@ -85,22 +84,18 @@ hr {
     border-radius: 100%;
 }
 
-.aside-content__detail-bold {
-    font-weight: 500;
-    margin: 12px 0 0 0;
-}
-
-.aside-content__item p {
+.aside-item p {
     color: var(--red);
     font-weight: 500;
-    padding-left: 12px;
+    margin: 12px;
 }
+
 
 .form {
     padding: 24px;
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
-    width: 100%;
+    width: 75%;
     align-items: center;
 }
 
@@ -113,6 +108,7 @@ hr {
     flex-direction: column;
     align-items: center;
     gap: 12px;
+    width: 100%;
 }
 
 .form__card-item {
@@ -121,7 +117,7 @@ hr {
     padding: 12px;
     flex-direction: column;
     /* height: 200px; */
-    width: 814px;
+    width: 100%;
     border: 1px solid var(--outline-variant);
     border-radius: 8px;
 }
