--- a/src/views/pages/account/card.ejs
+++ b/src/views/pages/account/card.ejs
@@ -14,33 +14,46 @@
 </head>
 
 <body>
-    <%- include('../../partials/header-medium') %>
-    <%- include('../../partials/nav-tree') %>
-
+    <%- include('../../partials/header-medium', { user }) %>
+    <%- include('../../partials/nav-tree', { nav_tree__data: [
+        { text: 'Trang chủ', link: '/' },
+        { text: 'Tài khoản', link: null },
+        { text: 'Thông tin cá nhân', link: '/account/information' }
+    ]}) %>
 
     <div class="payment-account-container">
         <aside class="aside-content">
             <div class="aside-content__profile">
-                <img class="aside-content__img" src="/imgs/milo.jpg" alt="avatar" />
+                <img class="aside-content__img" src="/imgs/user/<%= user.avatar ?? 'user_1.jpg' %>" alt="" />
                 <div class="aside-content__detail">
-                    <p class="aside-content__detail-bold">Giàu Phan</p>
+                    <p class="aside-content__detail-bold"><%= user.last_name + " " + user.first_name %></p>
                     <p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
                 </div>
             </div>
 
-            <hr>
+            <hr />
 
-            <div class="aside-content__section">
-                <p class="profile-btn">Thông tin cá nhân</p>
-                <p class="history-btn">Lịch sử đặt phòng</p>
-                <p class="account-payment-btn">Tài khoản thanh toán</p>
-                <p class="change-password-btn">Đổi mật khẩu</p>
+            <div class="aside-section">
+                <a style='text-decoration: none;' href="/account/information">
+                    <p>Thông tin cá nhân</p>
+                </a>
+                <a style='text-decoration: none;' href="/account/history">
+                    <p>Lịch sử đặt phòng</p>
+                </a>
+                <a style='text-decoration: none;' href="/account/card">
+                    <p class='active'>Tài khoản thanh toán</p>
+                </a>
+                <a style='text-decoration: none;' href="/account/change-password">
+                    <p>Đổi mật khẩu</p>
+                </a>
             </div>
 
             <hr />
 
-            <div class="aside-content__item logout-btn">
-                <p>Đăng xuất</p>
+            <div class="aside-item logout-btn">
+                <a style='text-decoration: none;' href="/auth/logout">
+                    <p>Đăng xuất</p>
+                </a>
             </div>
         </aside>
 
