--- a/src/views/pages/site/privacy-policy.ejs
+++ b/src/views/pages/site/privacy-policy.ejs
@@ -132,10 +132,11 @@
                         <li>- Thông tin liên quan đến danh tính, bao gồm thông tin nhận dạng do chính phủ cấp, quốc tịch.</li>
                     </ul>
                 </div>
+            </section>
         </div>
     </main>
     <%- include('../../partials/footer.ejs') %>
-    
+
     <script src="/scripts/header-small.js"></script>
 </body>
 
